Changes to react to get it working with backend
