# nodejs-server/controllers/Default.js
@@ -27,6 +27,18 @@ module.exports.packageByNameDelete = function packageByNameDelete (req, res, nex
     });
 };
 
+//test endpoint
+module.exports.HelloUpdate = function hello (req, res, next, body) {
+  xAuthorization = req.headers['x-authorization']; // Assign token from request header to global variable
+  Default.hello(body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.packageByNameGet = function packageByNameGet (req, res, next, name, xAuthorization) {
   xAuthorization = req.headers['x-authorization']; // Assign token from request header to global variable
   Default.packageByNameGet(name, xAuthorization)
